<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/background" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <!-- Title bar for DOUT controls -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_bar"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/DOUT_header"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- DOUT control buttons -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DOUT0"
                android:textColor="@color/black" />

            <view
                android:id="@+id/led_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                class="jp.rt_net.android.RTADKminiDemo.LEDControl"
                android:background="@null"
                android:src="@drawable/led_off" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DOUT1"
                android:textColor="@color/black" />

            <view
                android:id="@+id/led_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                class="jp.rt_net.android.RTADKminiDemo.LEDControl"
                android:background="@null"
                android:src="@drawable/led_off" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DOUT2"
                android:textColor="@color/black" />

            <view
                android:id="@+id/led_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                class="jp.rt_net.android.RTADKminiDemo.LEDControl"
                android:background="@null"
                android:src="@drawable/led_off" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DOUT3"
                android:textColor="@color/black" />

            <view
                android:id="@+id/led_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                class="jp.rt_net.android.RTADKminiDemo.LEDControl"
                android:background="@null"
                android:src="@drawable/led_off" />
        </LinearLayout>

        <!-- Title bar for Analog Output -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_bar"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/AOUT_header"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- DOUT control buttons -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="push" >
            </Button>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AOUT0"
                android:textColor="@color/black" />

            <view
                android:id="@+id/led_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                class="jp.rt_net.android.RTADKminiDemo.LEDControl"
                android:background="@null"
                android:src="@drawable/led_off" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AOUT1"
                android:textColor="@color/black" />

            <view
                android:id="@+id/led_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                class="jp.rt_net.android.RTADKminiDemo.LEDControl"
                android:background="@null"
                android:src="@drawable/led_off" />
        </LinearLayout>

        <!-- Title bar for push buttons -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_bar"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_header"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Creation of Button 1 -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/sub_title"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="8sp"
                    android:text="@string/button_1"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/button1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_pressed"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <!-- Creation of Button 2 -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/sub_title"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="8sp"
                    android:text="@string/button_2"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/button2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_pressed"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <!-- Creation of Button 3 -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/sub_title"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="8sp"
                    android:text="@string/button_3"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/button3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_pressed"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <!-- Creation of Button 4 -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/sub_title"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="8sp"
                    android:text="@string/button_4"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/button4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_pressed"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <!-- Title bar for potentiometer -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_bar"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/pot_header"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Creating progress bar for potentiometer -->

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/AIN0_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="10dip" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar0"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="50dip"
                android:layout_height="10dip"
                android:max="255"
                android:progress="0" >
            </ProgressBar>
        </TableLayout>

        <!-- Creating progress bar for potentiometer -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/AIN1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="10dip" >
            </TextView>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="10dip"
            android:max="255"
            android:progress="0" />

        <!-- Creating progress bar for potentiometer -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/AIN2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="15dip" >
            </TextView>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="10dip"
            android:max="255"
            android:progress="0" />

        <!-- Creating progress bar for potentiometer -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textSize="10dip" >

            <TextView
                android:id="@+id/AIN3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="15dip" >
            </TextView>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar3"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="10dip"
            android:max="255"
            android:progress="0" />

        <!-- Microchip Logo and link.  MUST BE LAST!!  This item fills the remaining of the vertical space -->


        <!-- Title bar for Servo Control -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_bar"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Servo Control"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Value:"
                android:textColor="@color/black"
                android:textSize="10dip" >
            </TextView>

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </SeekBar>

            <TextView
                android:id="@+id/TextView8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Value:"
                android:textColor="@color/black"
                android:textSize="10dip" >
            </TextView>

            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </SeekBar>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>